quick refactor of Unit tests